--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,14 +1,6 @@
-@import "abstracts/variables.scss";
+@import "abstracts/variables";
 
-@import "base/base.scss";
-
-@import "components/button.scss";
-@import "components/card.scss";
-@import "components/form.scss";
-@import "components/_navbar.scss";
-
-@import "layout/_footer.scss";
-@import "layout/_header.scss";
+@import "base/base";
 
 
 
