added font-family and its variable to css

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,6 +6,7 @@
     box-sizing: inherit;
 }
 html{
+    font-family: $main-font;
     font-size: 62.5%;       //1rem= 10px; 10px/16px= 62.5%;
 }
 body{
