--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -7,7 +7,7 @@
         padding-right: 1.4rem; 
     }
     &-name{
-      
+      color: $color-grey-dark;
     }
     
     &__header-1{
@@ -25,6 +25,6 @@
     }
     &__icon{
         font-size: 3rem;
-        color: orangered;
+        color: $color-grey-dark;
     }
 }
