--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,8 +1,7 @@
 .header{
     width: 100%;
-    height: 100vh;
-    
-    background-color: $color-secondary-light;
+    height: 100vh;    
+    background-image: linear-gradient(to right, rgba($color-secondary-light, .5), rgba($color-secondary-dark, .5));
     display: flex;
     flex-direction: column;
     justify-content: center;
