--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+@keyframes rotateScale {
+  0% {
+    -webkit-transform: scale(2) rotateZ(0);
+    transform: scale(2) rotateZ(0); }
+  50% {
+    -webkit-transform: scale(4) rotateZ(180deg);
+    transform: scale(4) rotateZ(180deg); }
+  100% {
+    -webkit-transform: scale(2) rotateZ(360deg);
+    transform: scale(2) rotateZ(360deg); } }
+
 *,
 *::after,
 *::before {
@@ -44,7 +55,7 @@ body {
 .header {
   width: 100%;
   height: 100vh;
-  background-color: #ffb900;
+  background-image: linear-gradient(to right, rgba(255, 185, 0, 0.5), rgba(255, 119, 48, 0.5));
   display: flex;
   flex-direction: column;
   justify-content: center;
