--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,28 @@ body {
 .toggle {
   display: none; }
 
+.btn {
+  padding: 1rem 2rem;
+  border: 2px solid rgba(0, 0, 0, 0.5);
+  border-radius: .5rem;
+  background-color: transparent;
+  opacity: .6;
+  font-size: 2rem;
+  text-transform: capitalize;
+  outline: 0;
+  box-shadow: -2px 2px rgba(0, 0, 0, 0.5); }
+  .btn-header {
+    background-color: #7E31ED;
+    box-shadow: -2px 2px rgba(131, 109, 255, 0.5);
+    border: none;
+    opacity: 1;
+    color: #f7f7f7; }
+    .btn-header:active {
+      transform: translateX(-1px);
+      box-shadow: -1px 1px rgba(131, 109, 255, 0.5); }
+    .btn-header:hover {
+      filter: brightness(1.2); }
+
 .nav {
   position: absolute;
   z-index: 100;
@@ -43,15 +65,6 @@ body {
     font-size: 3rem;
     color: #777; }
 
-.hero-name {
-  color: #777; }
-
-.hero__header-1 {
-  font-size: 2rem; }
-
-.hero__header-2 {
-  font-size: 1.5rem; }
-
 .header {
   width: 100%;
   height: 100vh;
@@ -59,7 +72,19 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-content: center; }
+  align-content: center;
+  color: #f7f7f7; }
   .header > * {
     justify-self: center;
     align-self: center; }
+
+.heading-1 {
+  font-size: 4.2rem;
+  opacity: 1;
+  text-shadow: 0 3px 0 rgba(126, 49, 237, 0.5); }
+
+.heading-2 {
+  font-size: 2.4rem;
+  font-weight: 400;
+  padding-bottom: 50px;
+  text-shadow: 0 1px 0 rgba(126, 49, 237, 0.5); }
