--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,9 +6,21 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
-
+    color: $color-grey-light-1;
+   
     &>*{
         justify-self: center;
         align-self: center;
     }
+}
+.heading-1{
+    font-size: 4.2rem;
+    opacity: 1;
+    text-shadow: 0 3px 0 rgba($color-primary, .5);    
+}
+.heading-2{
+    font-size: 2.4rem;
+    font-weight: 400;
+    padding-bottom: 50px;
+    text-shadow: 0 1px 0 rgba($color-primary, .5); 
 }
