--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
 .nav {
   position: absolute;
   z-index: 100;
-  background-image: linear-gradient(to right, rgba(247, 247, 247, 0.7), #d1d1d1);
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.4));
   width: 100%; }
   .nav-left {
     display: flex;
@@ -63,12 +63,12 @@ body {
     width: 4.3rem; }
   .nav__icon {
     font-size: 3rem;
-    color: #777; }
+    color: #f7f7f7; }
 
 .header {
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(to right, rgba(255, 185, 0, 0.5), rgba(255, 119, 48, 0.5));
+  background: #ffb900;
   display: flex;
   flex-direction: column;
   justify-content: center;
