--- a/sass/base/_animation.scss
+++ b/sass/base/_animation.scss
@@ -13,3 +13,19 @@
     }
   } 
   
+  @keyframes background-grow{
+    0%{
+     width: 0;
+    }
+   33%{
+      width: 35%;
+    }
+    66%{
+      width: 10%;
+    }
+    100%{
+      width: 35%;
+      opacity: 0.7;
+    }
+    
+  }
