--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,11 +2,17 @@ $color-primary: #7E31ED;
 $color-primary-light:#a35dff;
 
 
-$color-secondary-light: #ffb900;
-$color-secondary-dark: #ff7730;
+$color-secondary-light: #b681a2;
+$color-secondary-dark: #4f323b;
+
+$color-tertiary-1: #e9e2d0;
+$color-tertiary-2: #ea9085;
+
+
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #d1d1d1;
+
 
 $color-grey-dark: #777;
 $color-grey-dark-2: #999;
