--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -6,21 +6,26 @@
     opacity: .6;
     font-size: 2rem;
     text-transform: capitalize;
-    outline: 0;
-    box-shadow: -2px 2px rgba(0,0,0, 0.5);
+
     
     &-header{
-        background-color: $color-primary;
-        box-shadow: -4px 4px rgba(131, 109, 255, 0.5);
+        background-color: $color-tertiary-2;
         border: none;
         opacity: 1;
         color: $color-grey-light-1;
+        outline: 3px solid $color-tertiary-2;
+        outline-offset: 4px;
+        font-weight: 600;
+        
         &:active{
-            transform: translateX(-1px);
-            box-shadow: -2px 2px rgba(131, 109, 255, 0.5);
+            transform: translate(-2px);
         }
         &:hover{
-            filter: brightness(1.2);
+            background-color: $color-grey-light-1;
+            color: $color-tertiary-2;
+            outline: 3px solid $color-grey-light-1;
+            outline-offset: 5px;
+            box-shadow: none;
         }
     }
     
