--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,13 +1,13 @@
 .header{
     width: 100%;
     height: 100vh;    
-    background: $color-secondary-light; 
+    background: $color-tertiary-1; 
     //linear-gradient(to right, rgba($color-secondary-light, .5), rgba($color-secondary-dark, .5));
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    color: $color-grey-light-1;
+    color: $color-primary;
    
     &>*{
         justify-self: center;
