--- a/css/style.css
+++ b/css/style.css
@@ -116,9 +116,9 @@ body {
     width: 80vw; }
 
 .nav {
-  position: absolute;
+  position: fixed;
   z-index: 100;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.4));
+  background-color: transparent;
   width: 100%; }
   .nav-left {
     display: flex;
@@ -130,7 +130,7 @@ body {
     width: 4.3rem; }
   .nav__icon {
     font-size: 3rem;
-    color: #f7f7f7; }
+    color: #7E31ED; }
 
 .portfolio__grid {
   display: grid;
@@ -154,10 +154,15 @@ body {
 .heading-1 {
   font-size: 4.2rem;
   opacity: 1;
-  text-shadow: 0 3px 0 rgba(126, 49, 237, 0.5); }
+  text-shadow: 0 2px 0 #f7f7f7; }
 
 .heading-2 {
   font-size: 2.4rem;
   font-weight: 400;
-  padding-bottom: 50px;
-  text-shadow: 0 1px 0 rgba(126, 49, 237, 0.5); }
+  padding-bottom: 50px; }
+
+.heading-3 {
+  font-size: 2rem;
+  font-weight: 600;
+  padding-bottom: 4px;
+  color: #4f323b; }
