--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -17,11 +17,17 @@
 .heading-1{
     font-size: 4.2rem;
     opacity: 1;
-    text-shadow: 0 3px 0 rgba($color-primary, .5);    
+    text-shadow: 0 2px 0 $color-grey-light-1;    
 }
 .heading-2{
     font-size: 2.4rem;
     font-weight: 400;
     padding-bottom: 50px;
-    text-shadow: 0 1px 0 rgba($color-primary, .5); 
+
+}
+.heading-3{
+    font-size: 2rem;
+    font-weight: 600;
+    padding-bottom: 4px;
+    color: $color-secondary-dark; 
 }
