--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -9,7 +9,7 @@
         justify-content: space-between; 
         align-items: center;
        // border-bottom: 1px solid;   
-        padding-right: 1.4rem;  
+        padding: 1rem 1.4rem;  
     }
     &__img{
         height: 5rem;
