--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -15,7 +15,7 @@
     }
 }
 .heading-1{
-    font-size: 4.2rem;
+    font-size: 3.2rem;
     opacity: 1;
     text-shadow: 0 2px 0 $color-grey-light-1;    
 }
@@ -23,7 +23,7 @@
     font-size: 2.4rem;
     font-weight: 400;
     padding-bottom: 50px;
-
+    text-align: center;
 }
 .heading-3{
     font-size: 2rem;
