--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -4,7 +4,7 @@
     border-radius: .5rem;
     background-color: transparent;
     opacity: .6;
-    font-size: 2rem;
+    font-size: 2.2rem;
     text-transform: capitalize;
 
     
@@ -16,16 +16,15 @@
         outline: 3px solid $color-tertiary-2;
         outline-offset: 4px;
         font-weight: 600;
+        cursor: pointer;
+        transition: all .3s;
         
         &:active{
-            transform: translate(-2px);
+            filter: hue-rotate(45deg);
         }
         &:hover{
-            background-color: $color-grey-light-1;
-            color: $color-tertiary-2;
-            outline: 3px solid $color-grey-light-1;
-            outline-offset: 5px;
-            box-shadow: none;
+            outline-offset: 8px;
+            transform: rotate(2deg);
         }
     }
     
