updated file imports

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,6 @@
 
 @import "base/animation";
 @import "base/base";
-@import "base/typography";
 
 @import "components/button";
 @import "components/card";
@@ -13,7 +12,7 @@
 @import "layout/aboutme";
 @import "layout/footer";
 @import "layout/grid";
-@import "layout/header";
+@import "layout/hero";
 
 
 
