--- a/sass/layout/_aboutme.scss
+++ b/sass/layout/_aboutme.scss
@@ -1,4 +1,32 @@
 .aboutMe{
-height: 95vh;
-width: 100vw;
+    background-color: $color-primary;
+    color: $color-grey-light-1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    padding: 2rem 1rem 1rem 1rem;
+    height: 100vh;
+    font-size: 1.5rem;
+    text-align: justify;
+    
+    &>.heading-2{
+        padding-bottom: .4rem;
+        border-bottom:  3px solid rgba($color-grey-dark-2, .5);
+    }
+
+&__story{
+    padding-top: 1.2rem;
+    padding-bottom: 2rem;
+    border-bottom: 3px solid rgba($color-grey-dark-2, .5);
 }
+
+&__img--profile{
+    height: 10rem;
+    float: left;
+    margin-right: 1.5rem;
+    border: 4px solid $color-grey-dark-2;
+    border-radius: 50%;
+}
+}
+
