--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -2,8 +2,7 @@
     padding: 1rem 2rem;
     border: 2px solid rgba(0,0,0, 0.5);
     border-radius: .5rem;
-    background-color: transparent;
-    opacity: .6;
+    opacity: .7;
     font-size: 2.2rem;
     text-transform: capitalize;
 
@@ -27,8 +26,14 @@
             transform: rotate(2deg);
         }
     }
-    
+    &-contactMe{
+        background-color: #fff;
+        color: $color-primary;
+        cursor: pointer;
+        &:hover{
+            transform: translateY(-.3rem);
+            opacity: 1;
+        }        
+    }    
 }
-
-
 
