edited footer to insert email

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,9 +6,7 @@ $color-secondary-light: #b681a2;
 $color-secondary-dark: #4f323b;
 
 $color-tertiary-1: #e9e2d0;
-$color-tertiary-2: #ea9085;
-
-
+$color-tertiary-2: #ee6553;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #d1d1d1;
