--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -13,51 +13,55 @@
        width: 0;  
     }
     &:hover &__description{
+       
         display: flex;
         flex-direction: column;
         align-content: center;
         justify-content: space-around;
         letter-spacing: .1rem;
-        background: linear-gradient(130deg, rgba($color-primary, 0.5), rgba($color-primary-light, 0.5));
+        background: linear-gradient(130deg, rgba($color-primary, 0.6), rgba($color-primary-light, 0.9));
         height: 100%;            
         width: 100%;
-        color: $color-grey-light-1;
-        -webkit-clip-path: circle(60% at 100% 50%);
-        clip-path: circle(60% at 100% 50%);           
+        color: $color-grey-dark-3;        
     }
 
     &__description--head{
-        text-align: end;
-        font-size: 1rem;
-        color: $color-grey-light-1;
+        text-align: center;
+        font-size: 2rem;
+        color: $color-grey-dark-3;
         position: relative;
         
 
         &::after{
             display: block;
             content:"";
-            background-color: $color-secondary-light;
+            background-color: $color-grey-light-1;
             border-radius: 1rem;
-            height: 2rem;
-            width: .8rem;
+            height: 3rem;
+            width: 1.5rem;
             position: absolute;
             top:0;
-            right: 0;
+            left: 30%;
             z-index: -5;
-           transform: translateX(.3rem);
             transition: all .3s ease-in;
             animation: background-grow 1s;
             animation-fill-mode: forwards;              
-        }
-       
+        } 
 
     }
     &__description--text{
-        text-align: end;
+        text-align: center;
+        font-weight: 700;
+        font-size: 1.5em;
+        
         & span{
             display: flex;
             flex-direction: column;
             align-content: flex-end;
+            
+        }
+        & span:last-child{
+            margin-bottom: .5rem;
         }
 
     }
