--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 
 @import "components/button";
 @import "components/card";
+@import "components/certificate";
 @import "components/form";
 @import "components/navbar";
 
