style portfolio screenshot cards and description transition

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,72 +1,36 @@
-.card{
-    background-image: linear-gradient(130deg, rgba($color-primary-light, 0.2) 50%, rgba($color-primary, 0.5) 90%);
-    margin: 0 auto;
+.card{   
+    margin: 5%;
+    text-align: center;
     position: relative;
-
+   
     &__description{
-        padding-right: .5rem;
+        background-image: linear-gradient(130deg, rgba($color-primary-light, 0.5) 50%, rgba($color-primary, 0.8) 90%);
+        
         position: absolute;
-        z-index: 3;
-        right: 0;
-        top: 0;
-       display: none;
-       width: 0;  
-    }
-    &:hover &__description{
-       
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-        justify-content: space-around;
-        letter-spacing: .1rem;
-        background: linear-gradient(130deg, rgba($color-primary, 0.6), rgba($color-primary-light, 0.9));
-        height: 100%;            
+        bottom: 0; 
         width: 100%;
-        color: $color-grey-dark-3;        
-    }
-
-    &__description--head{
-        text-align: center;
-        font-size: 2rem;
-        color: $color-grey-dark-3;
-        position: relative;
-        
-
-        &::after{
-            display: block;
-            content:"";
+        height: 0; 
+        max-height: min-content;
+        overflow: hidden; 
+        transition: height .3s linear, border .1s linear;        
+       
+        &--head{
+            font-size: 2rem;
+            color: $color-primary;
             background-color: $color-grey-light-1;
-            border-radius: 1rem;
-            height: 3rem;
-            width: 1.5rem;
-            position: absolute;
-            top:0;
-            left: 30%;
-            z-index: -5;
-            transition: all .3s ease-in;
-            animation: background-grow 1s;
-            animation-fill-mode: forwards;              
-        } 
-
-    }
-    &__description--text{
-        text-align: center;
-        font-weight: 700;
-        font-size: 1.5em;
-        
-        & span{
-            display: flex;
-            flex-direction: column;
-            align-content: flex-end;
-            
+            border-bottom: 1px solid $color-primary-light;            
         }
-        & span:last-child{
-            margin-bottom: .5rem;
+        &--text{            
+            font-weight: 700;
+            font-size: 1.5em;                  
         }
-
     }
+
     &>img{
-        width: 80vw;
+        width: 100%;       
     }
-    
+    &:hover .card__description{
+    height: 10rem;
+    border: 1px solid $color-primary-light;
+    }
 }
