--- a/css/style.css
+++ b/css/style.css
@@ -9,17 +9,6 @@
     -webkit-transform: scale(2) rotateZ(360deg);
     transform: scale(2) rotateZ(360deg); } }
 
-@keyframes background-grow {
-  0% {
-    width: 0; }
-  33% {
-    width: 40%; }
-  66% {
-    width: 10%; }
-  100% {
-    width: 40%;
-    opacity: 0.7; } }
-
 *,
 *::after,
 *::before {
@@ -68,58 +57,31 @@ body {
       opacity: 1; }
 
 .card {
-  background-image: linear-gradient(130deg, rgba(163, 93, 255, 0.2) 50%, rgba(126, 49, 237, 0.5) 90%);
-  margin: 0 auto;
+  margin: 5%;
+  text-align: center;
   position: relative; }
   .card__description {
-    padding-right: .5rem;
+    background-image: linear-gradient(130deg, rgba(163, 93, 255, 0.5) 50%, rgba(126, 49, 237, 0.8) 90%);
     position: absolute;
-    z-index: 3;
-    right: 0;
-    top: 0;
-    display: none;
-    width: 0; }
-  .card:hover .card__description {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: space-around;
-    letter-spacing: .1rem;
-    background: linear-gradient(130deg, rgba(126, 49, 237, 0.6), rgba(163, 93, 255, 0.9));
-    height: 100%;
+    bottom: 0;
     width: 100%;
-    color: #333; }
-  .card__description--head {
-    text-align: center;
-    font-size: 2rem;
-    color: #333;
-    position: relative; }
-    .card__description--head::after {
-      display: block;
-      content: "";
+    height: 0;
+    max-height: min-content;
+    overflow: hidden;
+    transition: height .3s linear, border .1s linear; }
+    .card__description--head {
+      font-size: 2rem;
+      color: #7E31ED;
       background-color: #f7f7f7;
-      border-radius: 1rem;
-      height: 3rem;
-      width: 1.5rem;
-      position: absolute;
-      top: 0;
-      left: 30%;
-      z-index: -5;
-      transition: all .3s ease-in;
-      animation: background-grow 1s;
-      animation-fill-mode: forwards; }
-  .card__description--text {
-    text-align: center;
-    font-weight: 700;
-    font-size: 1.5em; }
-    .card__description--text span {
-      display: flex;
-      flex-direction: column;
-      align-content: flex-end; }
-    .card__description--text span:last-child {
-      margin-bottom: .5rem; }
+      border-bottom: 1px solid #a35dff; }
+    .card__description--text {
+      font-weight: 700;
+      font-size: 1.5em; }
   .card > img {
-    width: 80vw; }
+    width: 100%; }
+  .card:hover .card__description {
+    height: 10rem;
+    border: 1px solid #a35dff; }
 
 .certificate-box {
   margin-top: 8vh;
@@ -138,8 +100,7 @@ body {
 .certificates-list {
   height: 60vh;
   overflow: auto;
-  text-align: center;
-  cursor: all-scroll; }
+  text-align: center; }
   .certificates-list .certificate > img {
     width: 85%;
     height: 100%;
