--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -2,9 +2,10 @@
     margin: 5%;
     text-align: center;
     position: relative;
+    color: $color-grey-light-1;
    
     &__description{
-        background-image: linear-gradient(130deg, rgba($color-primary-light, 0.5) 50%, rgba($color-primary, 0.8) 90%);
+        background-image: linear-gradient(130deg, rgba($color-primary-light, 0.9) 50%, rgba($color-primary, 1) 90%);
         
         position: absolute;
         bottom: 0; 
@@ -15,19 +16,23 @@
         transition: height .3s linear, border .1s linear;        
        
         &--head{
-            font-size: 2rem;
+            font-size: 1.4rem;
+            text-transform: capitalize;
             color: $color-primary;
             background-color: $color-grey-light-1;
-            border-bottom: 1px solid $color-primary-light;            
+            border-bottom: 1px solid $color-primary-light;
+
         }
-        &--text{            
+        &--text{
+            padding: .1rem;          
             font-weight: 700;
-            font-size: 1.5em;                  
+            font-size: 1rem;                
         }
     }
 
     &>img{
-        width: 100%;       
+        width: 100%;
+        opacity: 0.9;     
     }
     &:hover .card__description{
     height: 10rem;
