--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/* 
+0 - 600PX:  PHONE
+600 - 900PX TABLET POTRAIT
+900-1200    TABLET LANDSCAPE
+1200-1800   NOTEBOOK/DESKTOPS
+1800++      BIG DESKTOP
+*/
 @keyframes rotateScale {
   0% {
     -webkit-transform: scale(2) rotateZ(0);
@@ -49,12 +56,13 @@ body {
       outline-offset: 8px;
       transform: rotate(2deg); }
   .btn-contactMe {
-    background-color: #fff;
+    background-color: #f7f7f7;
     color: #7E31ED;
-    cursor: pointer; }
+    cursor: pointer;
+    opacity: 1; }
     .btn-contactMe:hover {
-      transform: translateY(-0.3rem);
-      opacity: 1; }
+      transform: translateY(-0.2rem);
+      opacity: 0.9; }
 
 .card {
   margin: 5%;
