added media query for phones

--- a/sass/layout/_aboutme.scss
+++ b/sass/layout/_aboutme.scss
@@ -9,24 +9,37 @@
     height: 100vh;
     font-size: 1.5rem;
     text-align: justify;
+
+    @include respond(phone){
+        font-size: 2rem;
+        padding: 2rem;
+    }
     
     &>.heading-2{
         padding-bottom: .4rem;
         border-bottom:  3px solid rgba($color-grey-dark-2, .5);
+
+        @include respond(phone){
+            font-size: 3rem;
+        }
     }
 
-&__story{
-    padding-top: 1.2rem;
-    padding-bottom: 2rem;
-    border-bottom: 3px solid rgba($color-grey-dark-2, .5);
-}
+    &__story{
+        padding-top: 1.2rem;
+        padding-bottom: 2rem;
+        border-bottom: 3px solid rgba($color-grey-dark-2, .5);
+    }
 
-&__img--profile{
-    height: 10rem;
-    float: left;
-    margin-right: 1.5rem;
-    border: 4px solid $color-grey-dark-2;
-    border-radius: 50%;
-}
+    &__img--profile{
+        height: 10rem;
+        float: left;
+        margin-right: 1.5rem;
+        border: 4px solid $color-grey-dark-2;
+        border-radius: 50%;
+        
+        @include respond(phone){
+            height: 24rem;
+        }
+    }
 }
 
