--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,10 @@ body {
     color: #7E31ED;
     cursor: pointer;
     opacity: 1; }
+    @media only screen and (min-width: 37.5em) {
+      .btn-contactMe {
+        width: 50%;
+        align-self: center; } }
     .btn-contactMe:hover {
       transform: translateY(-0.2rem);
       opacity: 0.9; }
@@ -84,16 +88,26 @@ body {
       color: #7E31ED;
       background-color: #f7f7f7;
       border-bottom: 1px solid #a35dff; }
+      @media only screen and (min-width: 37.5em) {
+        .card__description--head {
+          font-size: 2.5rem; } }
     .card__description--text {
       padding: .1rem;
       font-weight: 700;
       font-size: 1rem; }
+      @media only screen and (min-width: 37.5em) {
+        .card__description--text {
+          font-size: 2rem; } }
   .card > img {
     width: 100%;
     opacity: 0.9; }
   .card:hover .card__description {
     height: 10rem;
     border: 1px solid #a35dff; }
+    @media only screen and (min-width: 37.5em) {
+      .card:hover .card__description {
+        font-size: 2rem;
+        height: 20rem; } }
 
 .certificate-box {
   margin-top: 8vh;
@@ -162,9 +176,16 @@ body {
   height: 100vh;
   font-size: 1.5rem;
   text-align: justify; }
+  @media only screen and (min-width: 37.5em) {
+    .aboutMe {
+      font-size: 2rem;
+      padding: 2rem; } }
   .aboutMe > .heading-2 {
     padding-bottom: .4rem;
     border-bottom: 3px solid rgba(153, 153, 153, 0.5); }
+    @media only screen and (min-width: 37.5em) {
+      .aboutMe > .heading-2 {
+        font-size: 3rem; } }
   .aboutMe__story {
     padding-top: 1.2rem;
     padding-bottom: 2rem;
@@ -175,6 +196,9 @@ body {
     margin-right: 1.5rem;
     border: 4px solid #999;
     border-radius: 50%; }
+    @media only screen and (min-width: 37.5em) {
+      .aboutMe__img--profile {
+        height: 24rem; } }
 
 .footer {
   height: 30vh;
@@ -196,6 +220,9 @@ body {
     justify-content: space-evenly;
     font-size: 1.5rem;
     text-align: center; }
+    @media only screen and (min-width: 37.5em) {
+      .footer__nav {
+        font-size: 1.8rem; } }
     .footer__nav > li {
       list-style: none; }
     .footer__nav > li > a {
@@ -208,6 +235,9 @@ body {
     font-size: 1.3rem;
     display: flex;
     justify-content: space-evenly; }
+    @media only screen and (min-width: 37.5em) {
+      .footer__social {
+        font-size: 2rem; } }
     .footer__social > div {
       display: flex;
       flex-direction: column;
