--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -31,6 +31,12 @@
         color: $color-primary;
         cursor: pointer;
         opacity: 1;
+
+        @include respond(phone){
+            width: 50%;
+            align-self: center;
+        }
+
         &:hover{
             transform: translateY(-.2rem);
             opacity: 0.9;
