--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -5,8 +5,7 @@
     color: $color-grey-light-1;
    
     &__description{
-        background-image: linear-gradient(130deg, rgba($color-primary-light, 0.9) 50%, rgba($color-primary, 1) 90%);
-        
+        background-image: linear-gradient(130deg, rgba($color-primary-light, 0.9) 50%, rgba($color-primary, 1) 90%);        
         position: absolute;
         bottom: 0; 
         width: 100%;
@@ -22,11 +21,19 @@
             background-color: $color-grey-light-1;
             border-bottom: 1px solid $color-primary-light;
 
+            @include respond(phone){
+                font-size: 2.5rem;
+            }
+
         }
         &--text{
             padding: .1rem;          
             font-weight: 700;
-            font-size: 1rem;                
+            font-size: 1rem;
+
+            @include respond(phone){
+                font-size: 2rem;
+            }               
         }
     }
 
@@ -37,5 +44,9 @@
     &:hover .card__description{
     height: 10rem;
     border: 1px solid $color-primary-light;
+    @include respond(phone){
+        font-size: 2rem;
+        height: 20rem;
+    } 
     }
 }
