--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -22,6 +22,9 @@
         justify-content: space-evenly;
         font-size: 1.5rem;
         text-align: center;
+        @include respond(phone){
+            font-size: 1.8rem;
+        }
 
         &>li{
             list-style: none;            
@@ -46,6 +49,11 @@
         font-size: 1.3rem;
         display: flex; 
         justify-content: space-evenly;
+
+        @include respond(phone){
+            font-size: 2rem;
+        }
+
         &>div{
             display: flex;
             flex-direction: column;
