--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,6 @@ body {
     cursor: pointer;
     opacity: 1;
     width: max-content;
-    min-height: min-content;
     margin: 0 auto; }
     .btn-contactMe:hover {
       transform: translateY(-0.2rem);
@@ -115,32 +114,24 @@ body {
 
 .certificate-box {
   margin-top: 8vh;
-  text-align: center; }
+  text-align: center;
+  background-color: grey; }
   .certificate-box__heading {
-    margin-left: 5rem;
-    margin-right: 5rem;
     margin-bottom: 2vh;
     color: #7E31ED;
     text-transform: uppercase;
     font-size: 2rem;
-    background-color: #f7f7f7;
-    border-top: 4px solid #d1d1d1;
-    border-bottom: 4px solid #d1d1d1; }
+    text-shadow: -1px 1px #999; }
 
 .certificates-list {
   height: 60vh;
   overflow: auto;
   text-align: center; }
   .certificates-list .certificate > img {
-    width: 85%;
-    height: 100%;
+    width: 60%;
+    max-width: 640px;
+    height: auto;
     margin: .5rem auto; }
-    @media only screen and (min-width: 37.5em) {
-      .certificates-list .certificate > img {
-        width: 65%; } }
-    @media only screen and (min-width: 56.25em) {
-      .certificates-list .certificate > img {
-        width: 50%; } }
 
 .nav {
   position: fixed;
@@ -214,7 +205,8 @@ body {
     float: left;
     margin-right: 1.5rem;
     border: 4px solid #999;
-    border-radius: 50%; }
+    border-radius: 50%;
+    shape-outside: circle(50%); }
     @media only screen and (min-width: 37.5em) {
       .aboutMe__img--profile {
         height: 24rem; } }
