--- a/sass/layout/_aboutme.scss
+++ b/sass/layout/_aboutme.scss
@@ -10,6 +10,7 @@
     min-height: max-content;
     font-size: 1.5rem;
     text-align: justify;
+    
 
     @include respond(phone){
         font-size: 1.6rem;
@@ -47,6 +48,7 @@
         margin-right: 1.5rem;
         border: 4px solid $color-grey-dark-2;
         border-radius: 50%;
+        shape-outside: circle(50%);
         
         @include respond(phone){
             height: 24rem;
